--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-	<h1>Hello</h1>
+	<h1>Hello</h1><br>
+	<h2>This is first git hub page</h2>
 </body>
 </html>
